--- a/index.html
+++ b/index.html
@@ -64,22 +64,28 @@
 
             <div class="row no-gutters">
                 <div class="col-1 bg-black"></div>
-                <div class="col-1 bg-orange offset-2"></div>
+                <div class="col-1 bg-black"></div>
+                <div class="col-1 bg-orange offset-1"></div>
                 <div class="col-1 bg-yellows"></div>
                 <div class="col-1 bg-black"></div>
                 <div class="col-1 bg-yellows"></div>    
                 <div class="col-1 bg-orange"></div>
-                <div class="col-1 bg-black offset-2"></div>
+                <div class="col-1 bg-black offset-1"></div>
+                <div class="col-1 bg-black"></div>
                 
   
             </div>
 
             <div class="row no-gutters">
                 <div class="col-1 bg-black "></div>
-                <div class="col-1 bg-orange offset-3"></div>
+                <div class="col-1 bg-black"></div>
+                <div class="col-1 bg-black"></div>
+                <div class="col-1 bg-orange offset-1"></div>
                 <div class="col-1 bg-yellows"></div>
                 <div class="col-1 bg-orange"></div>
-                <div class="col-1 bg-black offset-3"></div>
+                <div class="col-1 bg-black offset-1"></div>
+                <div class="col-1 bg-black"></div>
+                <div class="col-1 bg-black"></div>
 
             </div>
 
